--- a/resources.qrc
+++ b/resources.qrc
@@ -2,6 +2,8 @@
     <qresource prefix="/">
         <file>shaders/phong.frag</file>
         <file>shaders/phong.vert</file>
+        <file>shaders/iso.frag</file>
+        <file>shaders/iso.vert</file>
     </qresource>
     <qresource prefix="/models">
         <file alias="OpenCube.obj">models/OpenCube.obj</file>
