--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -285,21 +285,25 @@ QGroupBox::title {
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="radioButton">
-            <property name="text">
-             <string>Linear (weighted)</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="ShadingRadioNormal_2">
-            <property name="text">
-             <string>Spherical</string>
-            </property>
-           </widget>
+           <layout class="QVBoxLayout" name="AveragingBox">
+            <item>
+             <widget class="QRadioButton" name="LinearAveragingRadioButton">
+              <property name="text">
+               <string>Linear (weighted)</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="SphericalAveragingRadioButton">
+              <property name="text">
+               <string>Spherical</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
           <item>
            <widget class="Line" name="line">
